--- a/Innerpage.html
+++ b/Innerpage.html
@@ -128,8 +128,38 @@
                             <p id="success"><img src="images/success-icon.svg" id="icon"><span id="mes4">This is a Success message!</span></p>
                             </div>
                         </div>
+                        <div class="row justify-content-start">
+                            <div class="col-md-12">
+                            <h5 id="action">Call to action</h5>
+                            <button id="primary"><span id="pri">Primary</span></button>
+                            <button id="secondary"><span id="seco">Secondary</span></button>
+                            </div>
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-md-12">
+                                <h5 id="tab">Tabs</h5>
+                            <div class="tabs">
+                                <p id="tab1">Tab&nbsp;1</p>
+                                <p id="tab2">Tab&nbsp;2</p>
+                                <p id="tab3">Tab&nbsp;3</p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-md-12">
+                                <a id="line1">
+                                    <p id="underline"></p>
+                                    <p id="line"></p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row justify-content-start">
+                            <div class="col-md-12">
+                                <p id="loram">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                 </div>
             </div>
         </div>
     </body>
